--- a/Frontend/addProject.html
+++ b/Frontend/addProject.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/addProject.css">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <title>New project - Work Flow</title>
 </head>
 <body>
@@ -53,8 +54,8 @@
                     </div>
                     <div id="calculation-rate">
                         <!-- Inject Code -->
-                        <h5>Calculation rule</h5>
-                       <p>
+                        <h5 id="h5"></h5>
+                       <p id="billable-rate">
                         <!-- Inject the Data here here -->
                        </p>
                     </div>
