--- a/Frontend/project.html
+++ b/Frontend/project.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/project.css">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <title>Projects - Work Flow</title>
 </head>
 <body>  
@@ -49,7 +50,7 @@
             </div>
             <hr>
 
-            <div id="table-data">
+            <div id="data-container">
                 <!-- Append data here -->
             </div>
         </div>
