--- a/Frontend/team.html
+++ b/Frontend/team.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="stylesheet" href="./styles/team.css">
     <title>Team members - Work Flow</title>
 </head>
@@ -30,10 +31,10 @@
             </div>
 
             <div>
-                <input type="text" placeholder="Search by Team member name" id="search">
+                <input type="text" placeholder="Search by Team member's name" id="search">
             </div>
 
-            <div id="table">
+            <div class="table">
                 <div class="time">NAME</div>
                 <div class="time">EMAIL</div>
                 <!-- Data inject from data entered and date -->
@@ -52,7 +53,7 @@
             </div>
             <hr>
 
-            <div id="table-data">
+            <div id="data-container">
                 <!-- Append data here -->
             </div>
         </div>
