completed dashboard functionality

--- a/Frontend/dashboard.html
+++ b/Frontend/dashboard.html
@@ -60,27 +60,27 @@
                 <!-- Data inject from data entered and date -->
                 <div class="time-data">
                     <div class="date"></div>
-                    <div class="time">0:00</div>
+                    <div class="time time-append"></div>
                 </div>
                 <div class="time-data">
                     <div class="date"></div>
-                    <div class="time">0:00</div>
+                    <div class="time time-append"></div>
                 </div>
                 <div class="time-data">
                     <div class="date"></div>
-                    <div class="time">0:00</div>
+                    <div class="time time-append"></div>
                 </div>
                 <div class="time-data">
                     <div class="date"></div>
-                    <div class="time">0:00</div>
+                    <div class="time time-append"></div>
                 </div>
                 <div class="time-data">
                     <div class="date"></div>
-                    <div class="time">0:00</div>
+                    <div class="time time-append"></div>
                 </div>
                 <div class="time-data">
                     <div class="time" style="font-weight: 500;">Total Budget</div>
-                    <div class="time" style="margin-top: 10px; padding-left: 30px;">0:00</div>
+                    <div class="time total-time" style="margin-top: 10px; padding-left: 30px;">0:00</div>
                 </div>
             </div>
 
@@ -101,7 +101,7 @@
                         <td><input type="text" placeholder="hh:mm" class="day-time third"></td>
                         <td><input type="text" placeholder="hh:mm" class="day-time forth"></td>
                         <td><input type="text" placeholder="hh:mm" class="day-time fifth"></td>
-                        <td class="total time">19:00</td>
+                        <td class="total time total-time"></td>
                     </tr>
                     <tr>
                         <td><input type="text" placeholder="Project Name" class="first-col"></td>
@@ -111,7 +111,7 @@
                         <td><input type="text" placeholder="hh:mm" class="day-time third"></td>
                         <td><input type="text" placeholder="hh:mm" class="day-time forth"></td>
                         <td><input type="text" placeholder="hh:mm" class="day-time fifth"></td>
-                        <td class="total time">19:00</td>
+                        <td class="total time total-time"></td>
                     </tr>
                     <tr>
                         <td><input type="text" placeholder="Project Name" class="first-col"></td>
@@ -121,7 +121,7 @@
                         <td><input type="text" placeholder="hh:mm" class="day-time third"></td>
                         <td><input type="text" placeholder="hh:mm" class="day-time forth"></td>
                         <td><input type="text" placeholder="hh:mm" class="day-time fifth"></td>
-                        <td class="total time">19:00</td>
+                        <td class="total time total-time"></td>
                     </tr>
                     <tr>
                         <td><input type="text" placeholder="Project Name" class="first-col"></td>
@@ -131,7 +131,17 @@
                         <td><input type="text" placeholder="hh:mm" class="day-time third"></td>
                         <td><input type="text" placeholder="hh:mm" class="day-time forth"></td>
                         <td><input type="text" placeholder="hh:mm" class="day-time fifth"></td>
-                        <td class="total time">19:00</td>
+                        <td class="total time total-time"></td>
+                    </tr>
+                    <tr>
+                        <td><input type="text" placeholder="Project Name" class="first-col"></td>
+                        <td><input type="text" placeholder="Task" class="second-col"></td>
+                        <td><input type="text" placeholder="hh:mm" class="day-time first" ></td>
+                        <td><input type="text" placeholder="hh:mm" class="day-time second"></td>
+                        <td><input type="text" placeholder="hh:mm" class="day-time third"></td>
+                        <td><input type="text" placeholder="hh:mm" class="day-time forth"></td>
+                        <td><input type="text" placeholder="hh:mm" class="day-time fifth"></td>
+                        <td class="total time total-time"></td>
                     </tr>
                 </table>
             </div>
