--- a/Frontend/project.html
+++ b/Frontend/project.html
@@ -34,10 +34,9 @@
                 <input type="text" placeholder="Search by Project name" id="search">
             </div>
 
-            <div id="table">
+            <div class="table">
                 <div class="time">NAME</div>
                 <div class="time">CREATED</div>
-                <!-- Data inject from data entered and date -->
                 <div class="time">
                     BILLABLE AMOUNT
                 </div>
