clone completed Final Commit

--- a/Frontend/createPass.html
+++ b/Frontend/createPass.html
@@ -54,11 +54,8 @@
 
     <!-- Main Div -->
     <div id="child2">
-        <div class="strong"><strong>Sign in</strong></div>
+        <div class="strong"><strong>Create Password</strong></div>
         <form id="form">
-
-            <label for="email"> <span>Email ID / Username</span></label>
-            <input type="email" name="email" id="email" placeholder="Enter Email ID / Username" required/>
 
             <label for="pass"><span>Password</span></label>
             <input type="password" name="pass" id="pass" placeholder="Enter Password" required/>
@@ -72,5 +69,5 @@
     </div>
 
 </body>
-<script src="./script/loginPage.js"></script>
+<script src="./script/createPass.js"></script>
 </html>
