--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="./images/logo.png">
     <link rel="stylesheet" href="./styles/index.css">
+    <link rel="stylesheet" href="./styles/loader.css">
     <title>Homepage</title>
 </head>
 <body>
@@ -23,7 +24,6 @@
             </div>
         </div>
     </nav>
-
     <div id="top-section">
         <div>
             <strong>Organize</strong> projects,<strong>Track</strong> time and <strong>Report</strong> your work
@@ -36,7 +36,33 @@
             Get Started - It's Free
         </div>
     </div>
-
+    <!-- Loader -->
+    <div class="boxes">
+        <div class="box">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+        <div class="box">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+        <div class="box">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+        <div class="box">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+    </div>
     <div id="image1">
         <img src="https://uploads-ssl.webflow.com/5c77a918ef19681741be7bca/5fd337b26121202b5bfb96d7_OriginalSize(1).png" alt="img">
     </div>
