clone completed (final commit)

--- a/Frontend/dashboard.html
+++ b/Frontend/dashboard.html
@@ -65,23 +65,23 @@
                 <!-- Data inject from data entered and date -->
                 <div class="time-data">
                     <div class="date"></div>
-                    <div class="time time-append"></div>
+                    <div class="time time-append">00:00</div>
                 </div>
                 <div class="time-data">
                     <div class="date"></div>
-                    <div class="time time-append"></div>
+                    <div class="time time-append">00:00</div>
                 </div>
                 <div class="time-data">
                     <div class="date"></div>
-                    <div class="time time-append"></div>
+                    <div class="time time-append">00:00</div>
                 </div>
                 <div class="time-data">
                     <div class="date"></div>
-                    <div class="time time-append"></div>
+                    <div class="time time-append">00:00</div>
                 </div>
                 <div class="time-data">
                     <div class="date"></div>
-                    <div class="time time-append"></div>
+                    <div class="time time-append">00:00</div>
                 </div>
                 <div class="time-data">
                     <div class="time" style="font-weight: 500;">Total Budget</div>
