--- a/Frontend/loginPage.html
+++ b/Frontend/loginPage.html
@@ -16,9 +16,9 @@
             <div id="logo" onclick="location.href=`./index.html`">
                 <img src="./images/logo.png" alt="logo">
             </div>
-            <div>
-                <div>How it Works</div>
-                <div>Pricing</div>
+            <div id="media-div">
+                <div class="media">How it Works</div>
+                <div class="media">Pricing</div>
                 <div onclick="location.href=`./loginPage.html`">Sign in</div>
                 <div onclick="location.href=`./registerPage.html`">Get Work Flow Free </div>
             </div>
