--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -13,12 +13,12 @@
     <!-- Navigation Bar -->
     <nav>
         <div>
-            <div id="logo" onclick="location.href=`./index.html`">
+            <div id="logo" class="media" onclick="location.href=`./index.html`">
                 <img src="./images/logo.png" alt="logo">
             </div>
-            <div>
-                <div>How it Works</div>
-                <div>Pricing</div>
+            <div id="media-div">
+                <div class="media">How it Works</div>
+                <div class="media">Pricing</div>
                 <div onclick="location.href=`./loginPage.html`">Sign in</div>
                 <div onclick="location.href=`./registerPage.html`">Get Work Flow Free </div>
             </div>
@@ -112,33 +112,6 @@
             Pro paid plan comes with additional features like invoicing, admin controls and priority support.</div>
     </div>
 
-    <!-- Loader -->
-    <div class="boxes">
-        <div class="box">
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-        </div>
-        <div class="box">
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-        </div>
-        <div class="box">
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-        </div>
-        <div class="box">
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-        </div>
-    </div>
     <!-- Footer -->
     <footer>
         <div><img src="./images/logo.png" alt="logo"></div>
