--- a/Frontend/memberDashboard.html
+++ b/Frontend/memberDashboard.html
@@ -21,7 +21,7 @@
         <div id="user">
             <img src="./images/user.png" alt="user">
             <!-- User Name Here-->
-            <span id="user-name"></span>
+            <div onclick="logOut()"><span id="user-name"></span></div>
         </div>
     </div>
 
